# fxcm

./: .coverage  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerrun.aws.json  docker-compose.debug.yml  docker-compose.yml  job.txt  keto.txt  my_data.txt  my_data2.txt  mypy.ini  online.txt  profile_output.prof  pyproject.toml  remote.txt  social.txt  start.sh
.circleci/: config.yml
.ebextensions/: 01-add-security-group.config  timezone.config
cdk/: cdk.py  fastapi_stack.py
src/: .env  config.py  data.json  logger.py  main.ipynb  main.py  utils.py
src/api/: app.py
src/classes/: fundamental.py  trade.py  trend.py
src/container/: container.py
src/data/: data.py
src/domain/: data.py  events.py  fundamental.py  trade.py  user.py
src/entry_points/: app.py
src/errors/: errors.py
src/fxcm_connect/: fxcm_connect.py
src/indicators/: forex_factory_scraper.py  fundamentals.py  indicators.py
src/models/: db_connect.py  fundamental_model.py  model.py  mongo_connect.py  trade_model.py
src/repositories/: base_repository.py  fundamental_repository.py  fundamental_trend_repository.py  trade_repository.py
src/scheduler/: scheduler.py
src/service_layer/: event_bus.py  forex_factory_scraper.py  fundamental_service.py  handlers.py  indicators.py  trade_service.py  uow.py
src/services/: fundamental_service.py
src/strategy/: strategy.py
test/: conftest.py  content.txt  context_1_day.txt  context_2_day.txt  data.csv  data.json  oanda_data.json  open_positions.csv  soup.html
test/integration/: conftest.py  test_create_fundamentals.py  test_create_trade.py
test/test_adapters/: test_forex_factory_scraper.py  test_fxcm_connect.py  test_indicators.py
(+51 files in other folders)
