[tool.poetry]
name = "fxcm"
version = "0.1.0"
description = ""
authors = ["kev0h1 <45684757+kev0h1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fxcmpy = "^1.3.3"
python-dotenv = "^0.21.0"
pandas = "^1.5.2"
pytest = "^7.2.0"
mock = "^4.0.3"
black = "^22.10.0"
matplotlib = "^3.6.2"
ipykernel = "^6.17.1"
pytest-cov = "^4.0.0"
html5lib = "^1.1"
pre-commit = "^2.20.0"
autoflake = "^2.0.0"

[tool.poetry.group.dev.dependencies]
fxcmpy = "^1.3.3"
numpy = "^1.23.5"
requests = "^2.28.1"
bs4 = "^0.0.1"
pyhumps = "^3.8.0"
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
